apps/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: ghcr.io/anishamidi/exchange:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
