apps/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: ClusterIP
  ports:
    - port: 8000       
      targetPort: 8000 
  selector:
    app: django
